# labelforge

./: .dockerignore  .env.example  .gitignore  CAPABILITY.md  CLAUDE.md  Dockerfile  Makefile  README.md  RENDER_DEPLOYMENT_PLAN.md  commands.md  docker-compose.yml  generate_changes.py  pyproject.toml  render.yaml  setup.sh  start-docker.sh  start.ps1  start.sh  stop-docker.sh  stop.sh  workflow.md
backend/: apply_utils.py  db.py  dependencies.py  label_mapping.py  main.py  schemas.py  utils.py
backend/routers/: analyze.py  apply.py  components.py  configs.py  download.py  editable.py  import_json.py  templates.py  upload.py  user_labels.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
labelforge/: __init__.py  analyzer.py  applier.py  barcode_handler.py  changes_generator.py  cli.py  component_models.py  document_analyzer.py  models.py  ocr_handler.py  shape_handler.py  utils.py
labelforge-web/: .gitignore  README.md  pyproject.toml  requirements.txt
labelforge-web/backend/: db.py  dependencies.py  main.py  schemas.py
labelforge-web/backend/routers/: analyze.py  download.py  upload.py
labelforge-web/frontend/: index.html  tailwind.config.js
labelforge-web/frontend/src/: App.tsx  api.ts  index.css  types.ts
labelforge-web/frontend/src/components/: LabelTable.tsx  Toast.tsx  UploadZone.tsx  UserForm.tsx
labelforge-web/frontend/src/context/: LabelsContext.tsx
labelforge-web/frontend/src/pages/: Admin.tsx  Login.tsx  User.tsx
labelforge/mappings/: TRANSLATIONS&RULES.xlsx  __init__.py  mango_adhedist.py  mango_gi.py  mango_gi000dpo.py  mango_pv.py  translation.py
labelforge/templates/: ADHEDIST-mango_edit_no1_v2.ai  GI000DPO-SAP_1_ai.ai  (+2 more)
scripts/: seed_mock_profile.py
tests/: conftest.py  test_ai_preview.py  test_analyzer.py  test_applier.py  test_db_init.py  test_editable_persist.py  test_import_json.py
(+19 files in other folders)
