[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelforge"
version = "0.1.0"
description = "Professional PDF text label editor — CLI and web interface for extracting, editing, and re-applying text spans."
authors = [{ name = "LabelForge", email = "dev@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "python-barcode>=0.15.1",
    "qrcode[pil]>=7.4",
    "pyzbar>=0.1.9",
]

[project.scripts]
labelforge = "labelforge.cli:app"

[project.optional-dependencies]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "libsql>=0.1.8",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["labelforge", "backend"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
