[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelforge-web"
version = "0.1.0"
description = "LabelForge Web — FastAPI + React web interface for LabelForge"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["labelforge", "backend"]

[tool.ruff]
target-version = "py311"
line-length = 100
